Fix contact page and footer section

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Teste Foundation</title>
+  <title>Web Site Foundation</title>
   <link rel="stylesheet" href="css/foundation.css">
   <link rel="stylesheet" href="css/app.css">
 </head>
@@ -76,10 +76,10 @@
       </article>
 
       <article class="article2 row grid-x">
-        <div class="small-12 medium-7 colunm">
+        <div id="div-text" class="small-12 medium-7 colunm">
           <p>Proin varius porttitor sollicitudin. Quisque imperdiet neque id massa lobortis auctor quis eu ex. Pellentesque eu leo suscipit, ornare leo nec, ultrices dui. Sed ultrices nulla semper, posuere ligula ac, viverra ipsum.</p>
         </div>
-        <div class="small-12 medium-5 colunm">
+        <div id="div-img" class="small-12 medium-5 colunm">
           <img src="Images/eleven.png" alt="something">
         </div>
       </article>
@@ -87,13 +87,16 @@
     </section>
 
     <footer class="grid-x grid-padding-x small-12">
-      <div class="large-12 colunm" >
+      <div class="contact-div large-12 colunm" >
         <h1>Contact Us:</h1>
-        <img src="Images/face-icon.png" alt="">
-        <img src="Images/twitter-icon.png" alt="">
-        <img src="Images/instagram-icon.png" alt="">
-        <img src="Images/youtube-icon.png" alt="">
-        <span>&copyCopyright</span>
+        <div id="div-icons">
+          <img src="Images/face-icon.png" class="c-icon" alt="">
+          <img src="Images/twitter-icon.png" class="c-icon" alt="">
+          <img src="Images/instagram-icon.png" class="c-icon" alt="">
+          <img src="Images/youtube-icon.png" class="c-icon" alt="">
+        </div>
+        <br>
+        <span>&copyCopyright 2018</span>
       </div>
     </footer>
   </div>
