--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,15 @@
     <div class="grid-container content">
       <!-- Inicio cabecalho -->
       <header class="cabecalho cab-image grid-x grid-padding-x">
-        <div id="top-cabecalho" class="large-12 grid-x colunm" >
-          <div id="cab-logo" class="small-12 medium-6 large-6 colunms">
+        <div id="top-cabecalho" class="small-12 grid-x colunm" >
+          <div id="cab-logo" class="small-12 medium-6 colunm">
             <h1>LOGO</h1>
           </div>
-          <nav id="cab-menu" class="small-12 medium-6 large-6 colunms">
+          <nav id="cab-menu" class="small-12 medium-6 colunm">
             <ul class="menu">
-              <a><li>Home</li></a>
+              <a href="index.html"><li>Home</li></a>
               <a><li>About</li></a>
-              <a><li>Contact</li></a>
+              <a href="contact.html"><li>Contact</li></a>
             </ul>
           </nav>
         </div>
@@ -30,19 +30,23 @@
         <form class="small-12 medium-6 position-center">
           <input type="text" placeholder="Digite seu nome">
           <input type="email" placeholder="Digite seu email">
-          <textarea id="" cols="30" rows="10">
-
+          <textarea id="" cols="30" rows="5">
           </textarea>
+          <input type="submit" class="button" id="btnSubmit" value="Submit">
         </form>
       </section>
-      <footer class="grid-x grid-padding-x">
-        <div class="large-12 colunm" >
+
+      <footer class="grid-x grid-padding-x small-12">
+        <div class="contact-div large-12 colunm" >
           <h1>Contact Us:</h1>
-          <img src="Images/face-icon.png" alt="">
-          <img src="Images/twitter-icon.png" alt="">
-          <img src="Images/instagram-icon.png" alt="">
-          <img src="Images/youtube-icon.png" alt="">
-          <span>&copyCopyright</span>
+          <div id="div-icons">
+            <img src="Images/face-icon.png" class="c-icon" alt="">
+            <img src="Images/twitter-icon.png" class="c-icon" alt="">
+            <img src="Images/instagram-icon.png" class="c-icon" alt="">
+            <img src="Images/youtube-icon.png" class="c-icon" alt="">
+          </div>
+          <br>
+          <span>&copyCopyright 2018</span>
         </div>
       </footer>
     </div>
