--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             </div>
             <nav id="header-menu" class="medium-6 colunm hide-for-small-only">
                 <ul class="menu">
-                    <a href=""><li>Home</li></a>
-                    <a><li>About</li></a>
-                    <a href="contact.html"><li>Contact</li></a>
+                    <li><a href="">Home</a></li>
+                    <li><a>About</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
 
